mobilvisning til telefoner med ikke alt for lav opløsning
Signed-off-by: hjaltebaekgaard <32597837+hjaltebaekgaard@users.noreply.github.com>

--- a/app/src/main/res/layout/fragment_insufflator_mobil_visning.xml
+++ b/app/src/main/res/layout/fragment_insufflator_mobil_visning.xml
@@ -120,15 +120,16 @@
 
                 <TextView
                     android:id="@+id/gasforsyningTitel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
                     android:maxLines="1"
+                    android:gravity="center"
                     android:text="@string/gasforsyningTitel"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/gasforsyningMeter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +137,7 @@
 
                 <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                     android:id="@+id/gasforsyningMeter"
-                    android:layout_width="64dp"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -155,8 +156,6 @@
                 android:id="@+id/insufflator_linie1_container"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/clTryk"
                 app:layout_constraintEnd_toStartOf="@id/clTryk"
                 app:layout_constraintStart_toEndOf="@id/clGasforsyning"
@@ -177,7 +176,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clTryk"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/insufflator_linie2_container"
@@ -186,15 +185,16 @@
 
                 <TextView
                     android:id="@+id/trykTitel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
+                    android:gravity="center"
                     android:maxLines="1"
                     android:text="@string/trykTitel"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/clTrykIndhold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -202,30 +202,32 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/clTrykIndhold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginTop="4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/trykTitel">
 
                     <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                         android:id="@+id/trykMeter"
-                        android:layout_width="64dp"
+                        android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginEnd="4dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         android:elevation="4dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/clTrykDisplays"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/clTrykDisplays"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/clTrykDisplays" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/clTrykDisplays"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
+                        android:layout_height="0dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
@@ -243,11 +245,12 @@
                             android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="@string/displays00Placeholder"
+                            android:text="00"
                             android:textColor="@color/colorDisplayRed"
-                            android:textSize="100sp"
+                            android:textSize="16sp"
                             app:layout_constraintBottom_toTopOf="@+id/trykEnhedTekst"
                             app:layout_constraintEnd_toEndOf="parent"
+
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -255,12 +258,15 @@
                             android:id="@+id/trykEnhedTekst"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="4dp"
                             android:text="@string/trykEnhed"
+                            android:textSize="12sp"
                             app:layout_constraintBottom_toTopOf="@+id/trykMaalDisplay"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/trykDisplay"
+                            app:layout_constraintStart_toStartOf="@+id/trykDisplay"
                             app:layout_constraintTop_toBottomOf="@+id/trykDisplay" />
 
                         <TextView
@@ -274,7 +280,7 @@
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayGreen"
-                            android:textSize="100sp"
+                            android:textSize="16sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -290,8 +296,6 @@
                 android:id="@+id/insufflator_linie2_container"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/clFlowrate"
                 app:layout_constraintEnd_toStartOf="@id/clFlowrate"
                 app:layout_constraintStart_toEndOf="@id/clTryk"
@@ -311,7 +315,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clFlowrate"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/insufflator_linie3_container"
@@ -320,7 +324,7 @@
 
                 <TextView
                     android:id="@+id/flowrateTitel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -328,7 +332,7 @@
                     android:layout_marginBottom="4dp"
                     android:maxLines="1"
                     android:text="@string/flowrateTitel"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/clFlowrateIndhold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -336,20 +340,21 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/clFlowrateIndhold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginTop="4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/flowrateTitel">
 
                     <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
                         android:id="@+id/flowrateMeter"
-                        android:layout_width="64dp"
+                        android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
-                        android:layout_marginEnd="4dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:elevation="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -360,8 +365,7 @@
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/clFlowrateDisplays"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
+                        android:layout_height="0dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
@@ -379,24 +383,28 @@
                             android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="@string/displays00Placeholder"
+                            android:text="00"
                             android:textColor="@color/colorDisplayRed"
-                            android:textSize="100sp"
+                            android:textSize="16sp"
                             app:layout_constraintBottom_toTopOf="@+id/flowrateEnhedTekst"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
                             android:id="@+id/flowrateEnhedTekst"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="4dp"
                             android:text="@string/flowEnhed"
+                            android:textSize="12sp"
                             app:layout_constraintBottom_toTopOf="@+id/flowrateMaalDisplay"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/flowrateDisplay"
+                            app:layout_constraintStart_toStartOf="@+id/flowrateDisplay"
                             app:layout_constraintTop_toBottomOf="@+id/flowrateDisplay" />
 
                         <TextView
@@ -410,7 +418,7 @@
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayGreen"
-                            android:textSize="100sp"
+                            android:textSize="16sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -425,8 +433,6 @@
                 android:id="@+id/insufflator_linie3_container"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/clFlowrate"
                 app:layout_constraintEnd_toStartOf="@id/clVolumen"
                 app:layout_constraintStart_toEndOf="@id/clFlowrate"
@@ -446,7 +452,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clVolumen"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -456,21 +462,24 @@
 
                 <TextView
                     android:id="@+id/volumenTitel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="4dp"
                     android:maxLines="1"
                     android:text="@string/volumenTitel"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
+                    android:gravity="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+
                 <TextView
                     android:id="@+id/volumenDisplay"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="12dp"
@@ -482,20 +491,27 @@
                     android:text="@string/displays00Placeholder"
                     android:textAlignment="center"
                     android:textColor="@color/colorDisplayRed"
-                    android:textSize="100sp"
+                    android:textSize="40sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/volumenTitel" />
+                    app:layout_constraintTop_toBottomOf="@+id/volumenTitel"
+                    app:layout_constraintBottom_toTopOf="@+id/volumenEnhedTekst"/>
 
                 <TextView
                     android:id="@+id/volumenEnhedTekst"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="4dp"
                     android:text="@string/volumenEnhed"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/volumenDisplay" />
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    app:layout_constraintStart_toStartOf="@+id/volumenDisplay"
+                    app:layout_constraintEnd_toEndOf="@+id/volumenDisplay"
+                    app:layout_constraintTop_toBottomOf="@+id/volumenDisplay"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
 
             </android.support.constraint.ConstraintLayout>
