rettelse brugssenarie + tablets

--- a/app/src/main/res/drawable/knap_kanter.xml
+++ b/app/src/main/res/drawable/knap_kanter.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:background="#0d47a1"/>
 
-    <stroke android:width="1dip" android:color="#3366cc" />
+    <stroke android:width="1dip" android:color="#FFFF" />
 
     <corners android:radius="5dip"/>
 
