flyttet animationskaldet (dobbeltkonfekt) + realigned textview til vaelgscenarieadapter
Signed-off-by: hjaltebaekgaard <32597837+hjaltebaekgaard@users.noreply.github.com>

--- a/app/src/main/res/layout/adapter_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/adapter_vaelg_scenarie.xml
@@ -28,6 +28,8 @@
             android:layout_marginBottom="8dp"
             android:text="@string/scenarie_dummy_navn"
             android:textSize="26sp"
+            android:gravity = "center_vertical|start"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/knap_rediger_scenarie"
             app:layout_constraintStart_toStartOf="parent"
