--- a/app/src/main/res/drawable/knapper_hvid.xml
+++ b/app/src/main/res/drawable/knapper_hvid.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:background="#0d47a1"/>
 
-    <stroke android:width="1dip" android:color="#3366cc" />
+    <stroke android:width="1dip" android:color="#FFFF" />
 
     <corners android:radius="5dip"/>
 
-    <padding android:bottom="4dp"/>
+    <padding android:bottom="6dp"/>
     <padding android:top="4dp"/>
     <padding android:right="4dp"/>
     <padding android:left="4dp"/>
