--- a/app/src/main/res/layout/activity_vaelg_tablet.xml
+++ b/app/src/main/res/layout/activity_vaelg_tablet.xml
@@ -12,7 +12,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginBottom="4dp"
         android:background="#0d47a1"
         app:layout_constraintBottom_toTopOf="@+id/linie"
@@ -34,11 +34,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="#FFFF"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btnFunction2"
+            app:layout_constraintEnd_toStartOf="@id/btnFunction"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnFunction"
             style="@android:style/Widget.DeviceDefault.Button"
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@drawable/knap_kanter"
+            android:background="@drawable/knapper_hvid"
             android:backgroundTintMode="src_atop"
             android:elevation="4dp"
             android:text="@string/btnFunctionValue"
@@ -57,30 +57,10 @@
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnFunction2"
+            app:layout_constraintStart_toEndOf="@+id/tvVaelgTabletTitel"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnFunction2"
-            style="@android:style/Widget.DeviceDefault.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/knap_kanter"
-            android:backgroundTintMode="src_atop"
-            android:elevation="4dp"
-            android:text="@string/VaelgTablet_SendTilAlle"
-            android:textColor="#FFFF"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnFunction"
-            app:layout_constraintStart_toEndOf="@id/tvVaelgTabletTitel"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+
     </android.support.constraint.ConstraintLayout>
 
     <View
