--- a/app/src/main/res/drawable/knap_kanter.xml
+++ b/app/src/main/res/drawable/knap_kanter.xml
@@ -3,7 +3,7 @@
 
     <solid android:color="#FFFFFF"/>
 
-    <stroke android:width="1dip" android:color="#3366cc" />
+    <stroke android:width="1dip" android:color="#0d47a1" />
 
     <corners android:radius="5dip"/>
 
