--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#441133</color>
     <color name="colorYellow">#F1F150</color>
-    <color name="colorLightGray">#F0F0F0</color>
+    <color name="colorLightGray">#0D47A1</color>
     <color name="colorRed">#F15050</color>
     <color name="colorPrimaryDark">#330022</color>
-    <color name="colorAccent">#331144</color>
+    <color name="colorAccent">#0D47A1</color>
     <color name="colorDisplayBackground">#303030</color>
     <color name="colorDisplayGreen">#11DD11</color>
     <color name="colorDisplayRed">#DD1111</color>
